--- a/chat-service/package.json
+++ b/chat-service/package.json
@@ -23,5 +23,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.7.3",
     "uuid": "^11.0.5"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
