--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -1,26 +1,28 @@
 {
-  "name": "notification-service",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
-  "dependencies": {
-    "@types/amqplib": "^0.10.6",
-    "@types/express": "^5.0.0",
-    "@types/nodemailer": "^6.4.17",
-    "amqplib": "^0.10.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "firebase-admin": "^13.0.2",
-    "nodemailer": "^6.9.16",
-    "nodemon": "^3.1.9",
-    "sib-api-v3-typescript": "^2.2.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
-  }
+	"name": "notification-service",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"dev": "SET NODE_ENV=development & nodemon src/server.ts",
+		"build": "rm -rf build/ && tsc -p .",
+		"start": "SET NODE_ENV=production node build/index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"dependencies": {
+		"@types/amqplib": "^0.10.6",
+		"@types/express": "^5.0.0",
+		"@types/nodemailer": "^6.4.17",
+		"amqplib": "^0.10.5",
+		"dotenv": "^16.4.7",
+		"express": "^4.21.2",
+		"firebase-admin": "^13.0.2",
+		"nodemailer": "^6.9.16",
+		"nodemon": "^3.1.9",
+		"sib-api-v3-typescript": "^2.2.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.7.3"
+	}
 }
