--- a/notification-service/package.json
+++ b/notification-service/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "SET NODE_ENV=development & nodemon src/server.ts",
 		"build": "rm -rf build/ && tsc -p .",
-		"start": "NODE_ENV=production node build/index.js"
+		"start": "NODE_ENV=production node build/server.js"
 	},
 	"keywords": [],
 	"author": "",
