--- a/user-service/package.json
+++ b/user-service/package.json
@@ -5,7 +5,7 @@
 	"scripts": {
 		"dev": "SET NODE_ENV=development & nodemon src/server.ts",
 		"build": "rm -rf build/ && tsc -p .",
-		"start": "NODE_ENV=production node build/index.js"
+		"start": "cross-env NODE_ENV=production node build/server.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -28,6 +28,7 @@
 		"validator": "^13.12.0"
 	},
 	"devDependencies": {
+		"cross-env": "^7.0.3",
 		"typescript": "^5.7.3"
 	}
 }
